修復bug
