# src/api/model/index.ts
@@ -293,6 +293,11 @@ export * from './register200AllOf';
 export * from './register200AllOfData';
 export * from './registerBody';
 export * from './scoreRank';
+export * from './searchCoinBody';
+export * from './searchCoinResponse';
+export * from './searchCoinResponseAllOf';
+export * from './searchCoinResponseAllOfData';
+export * from './searchResultListItem';
 export * from './sendOtcChatBody';
 export * from './sendSayBody';
 export * from './smsGetBody';
